att page relogio

--- a/pages/relogio.html
+++ b/pages/relogio.html
@@ -18,11 +18,10 @@ function moveRelogio(){
 </head>
 
 <body onload="moveRelogio()">
-
-Vemos aqui o relógio funcionando...
+Relógio em funcionamento
 
 <form name="form_relogio">
-<input type="text" name="relogio" size="10">
+<input type="text" name="relogio" size="12">
 </form>
 
 </body>
